fix: card content spacing

--- a/docs-src/src/layouts/index.scss
+++ b/docs-src/src/layouts/index.scss
@@ -113,20 +113,6 @@ code {
   }
 }
 
-// Design Principle Cards
-.DesignPrinciples {
-  .rev-Card {
-    padding: $padding-base 0;
-  }
-
-  .SectionDivider {
-    @include breakpoint(large) {
-      border-left: 4px solid $color-divider;
-      padding-left: $padding-base;
-    }
-  }
-}
-
 // Bkgd Colors
 .ExampleBkgd--primary {
   background: $color-brand-primary;
